--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</ul> <!-- cd-faq-categories -->
 
 	<div class="cd-faq-items">
-		<p class="body-copy">I made this plugin because I was struggling to find something that'll let me generate multiple forms with custom fields. I didn't want to manually create markup for each field. Now using this plugin I can do that pretty easily. This is a first plugin I made for Craft CMS. So you may come across some bugs/issues, please report them to the github issue tracker.</p>
+		<p class="body-copy">FormBuilder is a Craft CMS plugin that lets you create forms for your front-end. Each form can have submission notification sent to form admin as well as submitter. All submission entries are saved to the database. You can easily view/update forms from the plugin's control panel. Form entries are also displayed on the plugin's entries page. You can view submissions and delete them if you want.</p>
 		<ul id="basics" class="cd-faq-group">
 			<li class="cd-faq-title"><h2>Installation</h2></li>
 			<div class="block">
@@ -40,7 +40,7 @@
 			</div>
 
 			<div class="block">
-				<p><span>2</span> Rename the folder to <code>formbuilder</code> and place it into your Craft CMS Plugin directory.</p>
+				<p><span>2</span> Rename the folder to <code>FormBuilder</code> and place it into your Craft CMS Plugin directory.</p>
 			</div>
 
 			<div class="block">
@@ -147,7 +147,7 @@
 		</ul>
 
 	</div> <!-- cd-faq-items -->
-	<a href="#0" class="cd-close-panel move-left">Close</a>
+	<a href="#0" class="cd-close-panel">Close</a>
 </section> <!-- cd-faq -->
 <script src="javascripts/jquery-2.1.1.js"></script>
 <script src="javascripts/jquery.mobile.custom.min.js"></script>
